<?xml version="1.0"?>
<package>
  <name>offboard_cpp</name> //패키지 이름
  <version>0.0.0</version>
  <description>The offboard_cpp package</description> //패키지 이름

  <maintainer email="jinyoung@todo.todo">jinyoung</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>



</package>